build.log
net/dsa/slave.c: In function 'dsa_slave_create':
net/dsa/slave.c:1271:19: error: 'struct dsa_switch_tree' has no member named 'master'
   master = ds->dst->master;
                   ^
make[2]: *** [net/dsa/slave.o] Error 1
make[1]: *** [net/dsa] Error 2
make[1]: *** Waiting for unfinished jobs....
drivers/misc/mediatek/connectivity/wlan/Makefile:6: include gen2
drivers/misc/mediatek/connectivity/wlan/gen2/Makefile:220: y
make: *** [net] Error 2
make: *** Waiting for unfinished jobs....
